--- a/制作隐藏图.html
+++ b/制作隐藏图.html
@@ -10,6 +10,7 @@
             display: block;
         }
         .layer {
+            display: none;
             position: fixed;
             inset: 0;
             backdrop-filter: blur(10px);
@@ -17,6 +18,7 @@
         .layer>div {
             box-shadow: 0px 0px 20px aqua;
             background-color: azure;
+            color: black;
             width: 300px;
             height: 150px;
             position: absolute;
@@ -50,6 +52,7 @@
     </div>
     <div class="layer">
         <div>
+            <div>输入宽度或高度（二选一）：</div>
             <div><label for="inputw">宽度</label><input type="number" id="inputw">px</div>
             <div><label for="inputh">高度</label><input type="number" id="inputh">px</div>
             <div><button>确定</button></div>
