--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </form>
     <a href="canvas.html"><h1>画布</h1></a>
     <a href="制作隐藏图.html"><h1>制作隐藏图</h1></a>
+    <a href="calc18.html"><h1>calc18</h1></a>
     <script>
         window.onerror = function (...e){
             alert(e);
