--- a/1/RatingReport.html
+++ b/1/RatingReport.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rating Report</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.min.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
             <defs v-gra="od"></defs>
         </svg>
         <div style="display: flex;justify-content: center;">
-            <div id="content" contenteditable="true" style="width: 80%;"></div>
+            <div class="markdown-body" id="content" contenteditable="true" style="width: 80%;"></div>
         </div>
     
         <div id="button" style="width: 50%;margin: 0 0 0 50%;">
