--- a/1/RatingReport.html
+++ b/1/RatingReport.html
@@ -62,7 +62,7 @@
             <defs v-gra="od"></defs>
         </svg>
         <div style="display: flex;justify-content: center;">
-            <div class="markdown-body" id="content" contenteditable="true" style="width: 80%;"></div>
+            <div class="markdown-body" id="content" contenteditable="true" style="width: 80%;min-height: 5em;"></div>
         </div>
     
         <div id="button" style="width: 50%;margin: 0 0 0 50%;">
