--- a/Amy.html
+++ b/Amy.html
@@ -72,7 +72,7 @@
                     const result = (0, eval)(code);
                     console.log(result);
                 } catch (error) {
-                    console.dir(error);
+                    console.warn(error);
                 }
             });
             undo.addEventListener("click", function () {
